--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
                   <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="shoes">Shoes</a>
+                  <a class="nav-link" href="#shoes">Shoes</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Backpack</a>
+                  <a class="nav-link" href="#backpack">Backpack</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Subscribe</a>
+                  <a class="nav-link" href="#subscribe">Subscribe</a>
                 </li>
               </ul>
             </div>
@@ -45,7 +45,7 @@
                           <h1>Dude Headphone</h1>
                           <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature.</p>
                           <h1 class="price">$1289</h1>
-                          <button class="buy-now-button">Buy Now</button>
+                          <button class="buy-now-button">Buy Now &rarr;</button>
                       </div>
                       <div class="col-md-5"><img class="d-block w-100" src="images/banner-images/headphone.png" alt="First slide"></div>
                   </div>
@@ -56,7 +56,7 @@
                         <h1>Mi LED TV 4A PRO 32 Cool</h1>
                           <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature.</p>
                           <h1 class="price">$420</h1>
-                          <button class="buy-now-button">Buy Now</button>
+                          <button class="buy-now-button">Buy Now &rarr;</button>
                     </div>
                     <div class="col-md-5"><img class="d-block w-100" src="images/banner-images/tv.png" alt="Second slide"></div>
                 </div>
@@ -67,7 +67,7 @@
                         <h1>X-Box</h1>
                           <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature.</p>
                           <h1 class="price">$600</h1>
-                          <button class="buy-now-button">Buy Now</button>
+                          <button class="buy-now-button">Buy Now &rarr;</button>
                     </div>
                     <div class="col-md-5"><img class="d-block w-100" src="images/banner-images/xbox.png" alt="Third slide"></div>
                 </div>
@@ -83,6 +83,115 @@
             </a>
           </div>
     </div>
+    <div class="container categories">
+        <div class="row">
+            <div class="col-md-4">
+                <div class="d-flex justify-content-between align-items-center cat1">
+                    <h1>Watch</h1>
+                    <img src="images/categories/watch.png" alt=""> 
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="d-flex justify-content-between align-items-center cat2">
+                    <h1>Bag</h1>
+                    <img src="images/categories/bag.png" alt="">
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="d-flex justify-content-between align-items-center cat3">
+                    <h1>Shoes</h1>
+                    <img src="images/categories/shoes.png" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="container shoes" id="shoes">
+        <div class="card-deck">
+            <div class="card">
+              <img class="card-img-top" src="images/shoes/shoe-1.png" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Reebok Dart Men’s Shoes</h5>
+                <p class="card-text">Some quick example text to build on
+                    the card title.</p>
+                <h5>$999</h5>
+                <button class="buy-now-button">Buy Now &rarr;</button>
+              </div>
+            </div>
+            <div class="card">
+              <img class="card-img-top" src="images/shoes/shoe-2.png" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Reebok Pump</h5>
+                <p class="card-text">Some quick example text to build on the card title</p>
+                <h5>$699</h5>
+                <button class="buy-now-button">Buy Now &rarr;</button>
+              </div>
+            </div>
+            <div class="card">
+              <img class="card-img-top" src="images/shoes/shoe-3.png" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some quick example text to build on the card title</p>
+                <h5>$970</h5>
+                <button class="buy-now-button">Buy Now &rarr;</button>
+              </div>
+            </div>
+          </div>
+    </div>
+
+
+    <div class="container" id="backpack">
+        <div class="card-deck">
+            <div class="card">
+              <img class="card-img-top" src="images/bags/bag-1.png" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Ison Backpack</h5>
+                <p class="card-text">Some quick example text to build on the card title.</p>
+                <h5>$999</h5>
+              </div>
+              <div class="card-footer">
+                <button class="buy-now-button">Buy Now &rarr;</button>
+              </div>
+            </div>
+            <div class="card">
+              <img class="card-img-top" src="images/bags/bag-2.png" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Biaowang Backpack </h5>
+                <p class="card-text">Some quick example text to build on the card title.</p>
+                <h5>$999</h5>
+              </div>
+              <div class="card-footer">
+                <button class="buy-now-button">Buy Now &rarr;</button>
+              </div>
+            </div>
+            <div class="card">
+              <img class="card-img-top" src="images/bags/bag-3.png" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Dxyizu WS54 Smart </h5>
+                <p class="card-text">Some quick example text to build on the card title.</p>
+                <h5>$920</h5>
+              </div>
+              <div class="card-footer">
+                <button class="buy-now-button">Buy Now &rarr;</button>
+              </div>
+            </div>
+          </div>
+    </div>
+
+
+    <div class="container color-bg d-flex align-items-center justify-content-center" id="subscribe">
+        <div>
+            <h3>LET'S STAY IN TOUCH</h3>
+            <h6>Get updates on sales specials and more</h6>
+            <input class="send-mail" placeholder="Enter your email" type="text">
+            <button class="buy-now-button">Send</button>
+        </div>
+    </div>
+
+    <footer>
+        <small>&copy; Panda Commerce All Rights Reserved 2020</small>
+    </footer>
 
 
 
