--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
             </a>
           </div>
     </div>
+    
     <div class="container categories">
         <div class="row">
             <div class="col-md-4">
@@ -106,7 +107,7 @@
         </div>
     </div>
 
-
+    <div class="bg-color">
     <div class="container shoes" id="shoes">
         <div class="card-deck">
             <div class="card">
@@ -178,6 +179,7 @@
             </div>
           </div>
     </div>
+  </div>
 
 
     <div class="container color-bg d-flex align-items-center justify-content-center" id="subscribe">
